# betting-test-task

./: README.md  docker-compose.e2e.yml  docker-compose.yml
bet_maker/: Dockerfile  main.py  pyproject.toml
bet_maker/core/: settings.py
bet_maker/db/: redis.py
bet_maker/schemas/: bet.py  event.py
bet_maker/services/: bet.py  line_provider.py
e2e_test_client/: main.py  pyproject.toml  run_e2e.sh  settings.py
line_provider/: main.py  pyproject.toml
line_provider/core/: settings.py
line_provider/db/: memory.py
line_provider/schemas/: event.py
line_provider/services/: bet_maker.py
