[tool.poetry]
name = "line_provider"
version = "0.1.0"
description = ""
authors = ["Rashid Mingazov <my@rdmingazov.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
pydantic = "^1.9.1"
uvicorn = "^0.18.2"
click = "8.0.2"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "^4.0.1"
isort = "5.6.4"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
